Refactor and fix remote debugging
